[tool.poetry]
name = "time-series"
version = "0.1.0"
description = "My time series project"
readme = "README.md"
package-mode = false  # Disable packaging mode

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ace-tools-open = "0.1.0"
termcolor = ">=2.5.0,<3.0.0"
pandas = "^2.2.3"
numpy = "^1.24.3"
statsmodels = "^0.14.4"
prophet = "^1.1.6"
llvmlite = "^0.44.0"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
squarify = "^0.4.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
